Table Role {
  id int [pk, increment]
  name varchar [unique]
}

Table Account {
  id int [pk, increment]
  userId int
  type varchar
  provider varchar
  providerAccountId varchar
  refresh_token text
  access_token text
  expires_at int
  token_type varchar
  scope varchar
  id_token text
  session_state varchar
  userId int [ref: > User.id]
  providerAccountId [unique: true]
}

Table Session {
  id int [pk, increment]
  sessionToken varchar [unique]
  userId int
  expires datetime
  userId int [ref: > User.id]
}

Table User {
  id int [pk, increment]
  username varchar [unique]
  phone_number varchar [unique]
  role_id int
  role_id int [ref: > Role.id]
  addresses UserAddress[]
  orders Order[]
  stockMovements StockMovement[]
  password varchar
  created_at datetime [default: `now()`]
  email varchar [unique]
  emailVerified datetime
  accounts Account[]
  sessions Session[]
}

Table VerificationToken {
  identifier varchar
  token varchar [unique]
  expires datetime
}

Table UserAddress {
  id int [pk, increment]
  user_id int
  userId int [ref: > User.id]
  address varchar
  created_at datetime [default: `now()`]
  orders Order[]
}

Table Animal {
  id int [pk, increment]
  name varchar
}

Table Brand {
  id int [pk, increment]
  name varchar
}

Table ProductLine {
  id int [pk, increment]
  name varchar
  brand_id int
  brand_id int [ref: > Brand.id]
  products Product[]
}

Table AnimalAge {
  id int [pk, increment]
  name varchar
  products Product[]
}

Table AnimalSize {
  id int [pk, increment]
  name varchar
  products Product[]
}

Table Product {
  id int [pk, increment]
  brand_id int
  brand Brand [ref: > Brand.id]
  product_line_id int
  productLine ProductLine [ref: > ProductLine.id]
  animal_id int
  animal Animal [ref: > Animal.id]
  animal_age_id int
  animalAge AnimalAge [ref: > AnimalAge.id]
  animal_size_id int
  animalSize AnimalSize [ref: > AnimalSize.id]
  description varchar
  sku varchar [unique]
  barcode varchar [unique]
  stock int
  retail_price float
  wholesale_price float
  weight float
  extra_weight float
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
  is_deleted boolean [default: false]
}

Table Distributor {
  id int [pk, increment]
  name varchar
}

Table PriceType {
  id int [pk, increment]
  name varchar
}

Table PriceHistory {
  id int [pk, increment]
  product_id int
  distributor_id int
  price_type_id int
  price float
  changed_at datetime [default: `now()`]
  is_deleted boolean [default: false]
}

Table ProductImage {
  id int [pk, increment]
  product_id int
  product Product [ref: > Product.id]
  url varchar
  alt_text varchar
  created_at datetime [default: `now()`]
}

Table OrderStatus {
  id int [pk, increment]
  name varchar
}

Table Order {
  id int [pk, increment]
  user_id int
  address_id int
  order_status_id int
  user User [ref: > User.id]
  address UserAddress [ref: > UserAddress.id]
  status OrderStatus [ref: > OrderStatus.id]
  items OrderItem[]
  delivery Delivery?
}

Table OrderItem {
  id int [pk, increment]
  order_id int
  product_id int
  quantity int
  price float
}

Table Delivery {
  id int [pk, increment]
  order_id int [unique: true]
  status varchar
}

Table MovementType {
  id int [pk, increment]
  name varchar
}

Table StockMovement {
  id int [pk, increment]
  product_id int
  user_id int
  movement_type_id int
  change int
  reference_id int
  created_at datetime [default: `now()`]
}
